apps/myapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp
spec:
  selector:
    app: myapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
