apps/myapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    external-dns.alpha.kubernetes.io/hostname: example.capihome.xyz
    kube-linter.io/ignore-checks: dangling-ingress
spec:
  tls:
    - hosts:
        - example.capihome.xyz
      secretName: wildcard-capihome-xyz-tls
  rules:
    - host: example.capihome.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
